Added code to determine whether to drop rows with NA in runtime

--- a/RMarkdown.Rmd
+++ b/RMarkdown.Rmd
@@ -12,6 +12,9 @@ install.packages("data.table")
 install.packages("R.utils")
 install.packages("stringr")
 tinytex::install_tinytex()()
+install.packages("ggplot2")
+install.packages("forcats")
+install.packages("tidyr")
 library(dplyr)
 library(readr)
 library(fs)
@@ -69,9 +72,73 @@ basics <- basics %>% select(tconst, # Unique title identifier (key for merging)
                             runtimeMinutes, # Duration in minutes
                             genres # List of genres
 )%>% filter(titleType =="movie", # Keep only feature films
-                             startYear >= 2011, startYear <= 2020, # Released from 2011 onwards up to 2020
-                             !is.na(runtimeMinutes)) # Exclude entries with missing runtime
+                             startYear >= 2011, startYear <= 2020) #, # Released from 2011 onwards up to 2020
+                             #!is.na(runtimeMinutes)) # Exclude entries with missing runtime
 ```
+Checking Missing Values
+```{r}
+#Count how many NAs there are
+sum(is.na(basics$runtimeMinutes))
+mean(is.na(basics$runtimeMinutes))  # proportion of missing values
+
+#Compare distributions (movies with vs. without runtimeMinutes)
+basics$runtime_missing <- is.na(basics$runtimeMinutes)
+table(basics$runtime_missing)
+
+#Check if NAs are more common for certain years, title types, or genres:
+library(ggplot2)
+library(forcats)
+library(tidyr)
+
+
+#Check if NAs are related to popularity (ratings dataset)
+# Step 1: Split multi-genre strings into separate rows
+basics_long <- basics %>%
+  separate_rows(genres, sep = ",") %>%
+  mutate(runtime_missing = is.na(runtimeMinutes))
+
+# Step 2: Collapse to top 10 genres (rest -> "Other")
+basics_long <- basics_long %>%
+  mutate(genres = fct_lump(genres, n = 10))
+
+merged_df$runtime_missing <- is.na(merged_df$runtimeMinutes)
+
+#Run all of the plots at once to view them side by side
+
+ggplot(basics, aes(x = startYear, fill = runtime_missing)) +
+  geom_bar(position = "fill") +
+  labs(title = "Proportion of missing runtimes by release year",
+       y = "Proportion")
+
+
+ggplot(basics_long, aes(x = genres, fill = runtime_missing)) +
+  geom_bar(position = "fill") +
+  labs(title = "Proportion of Missing Runtimes by Top 10 Genres",
+       x = "Genre",
+       y = "Proportion") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+
+merged_df %>%
+  mutate(vote_bin = cut(numVotes,
+                        breaks = c(0, 100, 1000, 10000, 100000, Inf),
+                        labels = c("0–100", "101–1k", "1k–10k", "10k–100k", "100k+"))) %>%
+  ggplot(aes(x = vote_bin, fill = is.na(runtimeMinutes))) +
+  geom_bar(position = "fill") +
+  labs(title = "Proportion of Missing Runtimes by Vote Category",
+       x = "Vote Category",
+       y = "Proportion")
+
+ggplot(merged_df, aes(x = averageRating, fill = runtime_missing)) +
+  geom_bar(position = "fill") +
+  labs(title = "Proportion of missing runtimes by Average Rating",
+       y = "Proportion")
+
+#Statistical test of “missingness” patterns
+chisq.test(table(basics$startYear, basics$runtime_missing))
+
+
+```
+
 
 ```{r}
 # Merge basics and ratings datasets on the common key "tconst"
