--- a/RMarkdown.Rmd
+++ b/RMarkdown.Rmd
@@ -1,22 +1,10 @@
 ---
 title: "IMDb Data Cleaning and Exploration"
-  output:
-  pdf_document: default
+output:
   html_document: default
 ---
-# Necessary Packages
-```{r}
-install.packages("dplyr")
-install.packages("readr")
-install.packages("fs")
-install.packages("data.table")
-install.packages("R.utils")
-install.packages("stringr")
-install.packages("ggplot2")
-install.packages("forcats")
-install.packages("tidyr")
-install.packages("tinytex")
-
+## Necessary Packages
+```{r packages, warning=FALSE, message=FALSE}
 # Load libraries
 library(dplyr)
 library(readr)
@@ -30,7 +18,7 @@ library(forcats)
 library(tidyr)
 ```
 
-# Data Pulling Script
+## Data Pulling Script
 ```{r}
 base_url <- "https://datasets.imdbws.com/"                 # Base URL for IMDb datasets
 files <- c("title.basics.tsv.gz", "title.ratings.tsv.gz")  # IMDb dataset files to download
@@ -58,7 +46,7 @@ ratings  <- fread(file.path(out_dir, "title.ratings.tsv.gz"),
                   sep = "\t", na.strings = "\\N", quote = "")
 ```
 
-# Quick data exploration
+## Quick data exploration
 ```{r}
 # Overview of datasets
 summary(ratings)
@@ -71,7 +59,7 @@ basics$startYear <- as.numeric(basics$startYear)
 basics$runtimeMinutes <- as.numeric(basics$runtimeMinutes)
 ```
 
-# Selecting relevant columns
+## Selecting relevant columns
 ```{r}
 basics <- basics %>%
   select(
@@ -89,7 +77,7 @@ basics <- basics %>%
   )
 ```
 
-# Checking missing values and patterns
+## Checking missing values and patterns
 ```{r}
 # Count and proportion of missing runtimes
 sum(is.na(basics$runtimeMinutes))   
@@ -110,7 +98,7 @@ merged_df <- merge(basics, ratings, by = "tconst") %>%
   mutate(runtime_missing = is.na(runtimeMinutes)) 
 ``` 
 
-# Visualizing missing data patterns
+## Visualizing missing data patterns
 ```{r}
 # Missingness by release year
 ggplot(basics, aes(x = startYear, fill = runtime_missing)) +
@@ -144,7 +132,7 @@ ggplot(merged_df, aes(x = averageRating, fill = runtime_missing)) +
        y = "Proportion")
 ```
 
-# Statistical tests & transformations
+## Statistical tests & transformations
 ```{r}
 # Statistical tests of missingness patterns
 chisq.test(table(basics$startYear, basics$runtime_missing))
@@ -158,7 +146,7 @@ merged_df <- merged_df %>%
   )
 ```
 
-# Filtering genres and votes
+## Filtering genres and votes
 ```{r}
 merged_df <- merged_df %>%
   filter(str_detect(genres, "Comedy") |
@@ -169,7 +157,7 @@ merged_df <- merged_df %>%
   filter(numVotes >= 50)                       # Keep NA and films with few votes
 ```
 
-# Imputing missing runtimes
+## Imputing missing runtimes
 ```{r}
 #  Impute missing runtimes by Genre x YearGroup 
 merged_df <- merged_df %>%
